# cpp-waste-recycling-bekor

./: .gitignore  BottleCapException.hpp  BottleCupGarbage.cpp  BottleCupGarbage.h  CMakeLists.txt  Dustbin.cpp  Dustbin.h  Dustbin9000.cpp  Dustbin9000.h  DustbinContentError.hpp  DustbinTests.hpp  Garbage.cpp  Garbage.h  MetalGarbage.cpp  MetalGarbage.h  PaperGarbage.cpp  PaperGarbage.h  PlasticGarbage.cpp  PlasticGarbage.h  README.md  main.cpp
